force-app/main/default/objects/ExceptionLog__e/ExceptionLog__e.object-meta.xml
<CustomObject>
    <label>Exception Log</label>
    <pluralLabel>Exception Logs</pluralLabel>
</CustomObject>