force-app/main/default/objects/ExceptionLog__e/fields/ErrorOccuredIn__c.field-meta.xml
<CustomField>
    <fullName>ErrorOccuredIn__c</fullName>
    <label>ErrorOccuredIn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>