force-app/main/default/objects/ExceptionLog__e/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will be checked once the error is resolved/acknowledged</description>
    <label>Status</label>
    <type>Checkbox</type>
</CustomField>